feat: update open api and get rid of search config stuff
